# lsdb-benchmarking

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  README.md  Untitled.ipynb  pyproject.toml
.github/ISSUE_TEMPLATE/: 1-bug_report.md
.github/workflows/: benchmark.yml  testing-and-coverage.yml
benchmarks/: basic_notebook.ipynb  conftest.py  simple_filtering.ipynb  test_basic.py  test_column_mean.py  test_crossmatch.py  test_filter_pipe.py  test_io.py  test_local_io.py  test_protocols.py  test_s3_io.py  test_simple_filtering.py
docs/: conf.py  index.rst  requirements.txt
src/lbench/: __init__.py  runner.py
src/lbench/cli/: env.py  lbench.py
src/lbench/dashboard/: app.py  context.py  layout.py  metrics.py  routes.py  utils.py
src/lbench/dashboard/layouts/: sidebar.py  tables.py  trends.py
src/lbench/dashboard/metrics/: __init__.py  benchmark_collection.py  metric.py  metric_group.py  registry.py
src/lbench/dashboard/metrics/groups/: __init__.py  computed_group.py  dask_group.py  execution_group.py  profiling_group.py  stats_group.py
src/lbench/dashboard/pages/: runs.py  trends.py
src/lbench/notebook/: __init__.py  magic.py
src/lbench/pytest/: __init__.py  fixtures.py  plugin.py
tests/lbench/: test_packaging.py
