[project]
name = "lbench"
version = "0.0.1"
dependencies = [
    "pytest",
    "pytest-benchmark",
    "typer",
    "dash",
    "dash-bootstrap-components",
    "pandas",
    "tuna",
    "memray"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
lbench = "lbench.cli.lbench:app"

[project.entry-points.pytest11]
lbench = "lbench.pytest"

[tool.pytest.ini_options]
markers = [
    "lbench_memory: mark test to capture memory usage"
]