[project]
name = "lbench"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
authors = [
    { name = "LINCC Frameworks", email = "lincc-frameworks-team@lists.lsst.org" }
]
description = "Benchmarking tools for LSDB"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "pytest",
    "pytest-benchmark",
    "typer",
    "dask[complete]",
    "dash",
    "dash-bootstrap-components",
    "pandas",
    "tuna",
    "memray"
]

[project.urls]
"Source Code" = "https://github.com/lincc-frameworks/lbench"

# On a mac, install optional dependencies with `pip install '.[dev]'` (include the single quotes)
[project.optional-dependencies]
dev = [
    "black", # Used for static linting of files
    "jupyter", # Clears output from Jupyter notebooks
    "pre-commit", # Used to run checks before finalizing a git commit
    "pytest-cov", # Used to report total code coverage
]

[build-system]
requires = [
    "setuptools>=62", # Used to build and package the Python project
    "setuptools_scm>=6.2", # Gets release version from git. Makes it available programmatically
]
build-backend = "setuptools.build_meta"

[project.scripts]
lbench = "lbench.cli.lbench:app"

[project.entry-points.pytest11]
lbench = "lbench.pytest"

[tool.setuptools_scm]
write_to = "src/lbench/_version.py"

[tool.pytest.ini_options]
markers = [
    "lbench_memory: mark test to capture memory usage"
]
testpaths = [
    "tests",
    "src",
    "docs",
]
addopts = "--doctest-modules --doctest-glob=*.rst"

[tool.black]
line-length = 110


[tool.coverage.run]
omit = ["src/lbench/_version.py"]
